Change mdc-top-app-bar from `fixed` to `fixedAdjustElement`
`fixedAdjustElement` is nice because it automatically gives the contents of the page a vertical offset so that the menu bar doesn't cover them up.

(In order to use this functionality, though, we have to tell mdc-top-app-bar which DOM element to give the offset to, which means we have to add an @Input to TopMenuBarComponent. This isn't a huge deal, but we do have to change it in a few places.)

Previously, we were putting in this vertical offset by hand. This is less than optimal for a few reasons:

1. It was brittle, since we depended on the exact height of the menu bar in pixels, and

2. The offset had to be applied to every page in the project, which meant that we couldn't easily remove the menu bar from a page.

The second reason is the one I care about, since I want to remove the menu bar from the large display page.

--- a/src/app/timer-progress-bar/timer-progress-bar.component.scss
+++ b/src/app/timer-progress-bar/timer-progress-bar.component.scss
@@ -1,9 +1,8 @@
 @import "../../variables";
 
 .timer-progress-bar-container {
+  position: relative;
   width: 100%;
-  position: absolute;
-  top: 0;
   color: darken($mdc-theme-primary, 35%);
 
   .monthProgress {
@@ -19,6 +18,9 @@
   }
 
   .progressMonths {
+    position: absolute;
+    top: 0;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -27,7 +29,6 @@
       flex: 1;
       height: 24px;
       line-height: 24px;
-      top: -24px;
       text-align: center;
       font-size: 16px;
       position: relative;
